--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -55,7 +55,7 @@ ul, ol, dl, figure,
 
 hr {
   margin-top: $spacing-unit;
-  border: 1px solid rgba(var(--front), 0.05);
+  border: 1px solid rgba(var(--front), 0.1);
   border-width: 1px 0 0;
 }
 
@@ -259,8 +259,8 @@ pre {
   max-width: calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit / 3 * 2;
-  padding-left: $spacing-unit / 3 * 2;
+  // padding-right: $spacing-unit / 3 * 2;
+  // padding-left: $spacing-unit / 3 * 2;
   @include clearfix;
 
   @include media-query(large) {
@@ -313,6 +313,7 @@ pre {
  * Tables
  */
 table {
+  margin-top: $spacing-unit;
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
