--- a/_sass/minima/_home-banner.scss
+++ b/_sass/minima/_home-banner.scss
@@ -82,7 +82,7 @@
     background-image: var(--background-image-path-mobile);
     background-size:     cover;
     background-repeat:   no-repeat;
-    background-position: center center; 
+    background-position: center center;
     transition: background-color 150ms $ease;
 
     @include retina() {
@@ -156,6 +156,7 @@
   padding: 5px 15px;
   position: relative;
   z-index: 1;
+  box-sizing: border-box;
 
   .home-banner-info-wrapper {
     width: 100%;
