--- a/_sass/minima/article/_dl.scss
+++ b/_sass/minima/article/_dl.scss
@@ -1,4 +1,4 @@
-.article {
+article.guide {
   dl {
     display: flex;
     flex-wrap: wrap;
