--- a/_sass/minima/article/_footnotes.scss
+++ b/_sass/minima/article/_footnotes.scss
@@ -1,8 +1,8 @@
-.article {
+article.guide {
   .footnotes {
     padding: $spacing-unit;
     font-size: 0.8rem;
-    margin: $spacing-unit*2 0 0 0;
+    margin-top: $spacing-unit*2;
     border: 1px solid rgba(var(--front), 0.05);
     box-sizing: border-box;
     background: #FDFDFD;
